--- a/src/styles/BookDetail.css
+++ b/src/styles/BookDetail.css
@@ -60,14 +60,14 @@
   flex-direction: column;
 }
 
-.book-image {
+.book-detail-image {
   width: 360px;
   height: 480px;
   border-radius: 16px;
   box-shadow: 4px 4px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
-.book-image img {
+.book-detail-image img {
   width: 100%;
   height: 100%;
   border-radius: 16px;
@@ -98,7 +98,7 @@
   margin-left: 30px;
 }
 
-.book-title {
+.book-detail-title {
   font-family: "Stylish", serif;
   font-weight: 400;
   font-style: normal;
