--- a/src/styles/BookCard.css
+++ b/src/styles/BookCard.css
@@ -23,6 +23,7 @@
 .book-item {
   max-width: 223px; /* 원하는 최대 너비 설정 */
   overflow: hidden; /* 넘치는 텍스트 숨기기 */
+  cursor: pointer;
 }
 
 .book-title {
